[gd_scene load_steps=3 format=3 uid="uid://cdj1hotq5j55q"]

[ext_resource type="Script" path="res://UI/scripts/pause_menu.gd" id="1_a5blr"]
[ext_resource type="Theme" uid="uid://c877x8f6cbfhs" path="res://Themes/menu_button.tres" id="2_gke3w"]

[node name="PauseMenu" type="CanvasLayer"]
script = ExtResource("1_a5blr")

[node name="PauseMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1154.0
offset_bottom = 645.0

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="PauseMenu"]

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
layout_mode = 0
offset_left = 461.0
offset_top = 256.0
offset_right = 662.0
offset_bottom = 351.0

[node name="resume" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../exit")
theme = ExtResource("2_gke3w")
action_mode = 0
text = "Resume"
flat = true

[node name="restart" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../resume")
theme = ExtResource("2_gke3w")
action_mode = 0
text = "Restart"
flat = true

[node name="exit" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../restart")
focus_neighbor_bottom = NodePath("../resume")
theme = ExtResource("2_gke3w")
action_mode = 0
text = "Exit"
flat = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="pressed" from="PauseMenu/VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/exit" to="." method="_on_exit_pressed"]
